h1. Changelog

Here's a summary of changes in each release. The list doesn't include some small changes or updates to test cases.

h2. Version 3.6.x - upcoming

* Fix problems with attribute parsing under PHP7.1 (closes "#175":https://github.com/textile/php-textile/issues/175 and "#176":https://github.com/textile/php-textile/issues/176).


h2. "Version 3.6.0 - 2016/11/17":https://github.com/textile/php-textile/releases/tag/v3.6.0

* Fix empty-like link texts (closes "#141":https://github.com/textile/php-textile/issues/141).
* Fix empty-like RedCloth definitions (closes "#142":https://github.com/textile/php-textile/issues/142).
* Fix empty-like table summaries (closes "#143":https://github.com/textile/php-textile/issues/143).
* Fix image dimension generation on Windows when doc_root can not be resolved (closes "#140":https://github.com/textile/php-textile/issues/140).
* Fix HTTP protocol restrictions not affecting images (closes "#144":https://github.com/textile/php-textile/issues/144).
* Add more versatile parsing method, @Parser::parse()@.
* Add @Parser::setRestricted()@ and @Parser::isRestrictedModeEnabled()@.
* Add @Parser::setLite()@ and @Parser::isLiteModeEnabled()@.
* Add @Parser::setDocumentType()@ and @Parser::getDocumentType()@.
* Add @Parser::setDocumentRootDirectory()@ and @Parser::getDocumentRootDirectory()@.
* Add @Parser::setImages()@ and @Parser::isImageTagEnabled()@.
* Add @Parser::setBlockTags()@ and @Parser::isBlockTagEnabled()@ (closes "#138":https://github.com/textile/php-textile/issues/138).
* Add @Parser::setLinkRelationShip()@ and @Parser::getLinkRelationShip()@.
* Add @Parser::setLineWrap()@ and @Parser::isLineWrapEnabled()@ (closes "#139":https://github.com/textile/php-textile/issues/139).
* Deprecate @Parser::textileThis()@, @Parser::textileRestricted()@ and @Parser::textileCommon()@ in favour of the more versatile @Parser::parse()@.